# Agent2048

./: .gitignore  LICENSE  PERFORMANCE_AUDIT.md  PITCH_DECK.md  README.md  SKEPTICAL_AUDIT.md  SYSTEM_AUDIT.md  TEST_COVERAGE_AUDIT.md  demo.cast  demo.sh  install.sh  pyproject.toml  record_demo.sh  requirements.txt
agent2048/: __init__.py  __main__.py  actions.py  agent.py  cli.py  config.py  exceptions.py  llm.py  logging_config.py  memory.py  prompts.py  providers.py  theme.py  tokenizer.py  toml_config.py  tui.py  utils.py
agent2048/storage/: __init__.py  zerog.py
calc_test/: calculator.py
chat_do_test/: temp_converter.py
contact_book/: contact_book.py  contacts.json
converter_test/: unit_converter.py
demo_project3/: current_time.py  random_greeting.py
dice_test/: dice.py
dice_test2/: dice.py
examples/: compression_demo.py  config.toml  memory_demo.py  real_compression_demo.py  visual_demo.py
expense_tracker/: expense_tracker.py  expenses.json
game_test/: guess_number.py
habit_tracker/: habit_tracker.py  habits.json
notes_app/: notes.py
tests/: test_actions.py  test_agent.py  test_cli.py  test_llm.py  test_memory.py  test_misc.py  test_providers.py  test_toml_config.py  test_tui.py
todo_app/: todo.py  todos.json
